force-app/main/default/objects/SVMXC__SPM_Repeat_Visit__c/SVMXC__SPM_Repeat_Visit__c.object-meta.xml
<CustomObject>
    <description>Holds the repeat visit status of the Work-orders that got into the system</description>
    <label>SPM - Repeat Visit</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Repeat Visits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>