force-app/main/default/objects/SVMXC__SPM_Repeat_Visit__c/fields/SVMXC__Primary_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Primary_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Primary Work Order</description>
    <inlineHelpText>Lookup to Primary Work Order</inlineHelpText>
    <label>Primary Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits (Primary Work Order)</relationshipLabel>
    <relationshipName>SPM_Repeat_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>