force-app/main/default/objects/SVMXC__SPM_Repeat_Visit__c/fields/SVMXC__Product_Warranty__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to Product Warranty Object</description>
    <label>Product Warranty</label>
    <referenceTo>SVMXC__Warranty__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>