force-app/main/default/objects/SVMXC__SPM_Repeat_Visit__c/fields/SVMXC__Repeat_Visit_Within__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Repeat_Visit_Within__c</fullName>
    <formula>SVMXC__Subsequent_Incident_On__c - SVMXC__First_Incident_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repeat Visit Within (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>