force-app/main/default/objects/SVMXC__SPM_Repeat_Visit__c/fields/SVMXC__Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to User Object</description>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>