force-app/main/default/objects/SVMXC__SPM_Repeat_Visit__c/fields/SVMXC__Technician__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to Technician Object</description>
    <label>Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>SPM - Repeat Visits</relationshipLabel>
    <relationshipName>SPM_Repeat_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>